Update man pages; add regression tests for config files in man pages (#28, #50)

--- a/man/detox.tbl.5
+++ b/man/detox.tbl.5
@@ -87,6 +87,7 @@ You could then enable this table in your
 .Pa ~/.detoxrc ,
 in conjunction with other filters.
 .Bd -literal
+.\" START SAMPLE
 # Sample detoxrc
 
 sequence default {
@@ -98,6 +99,7 @@ sequence default {
 };
 
 # EOF
+.\" END SAMPLE
 .Ed
 .Pp
 When
