Don't recurse into symlinks that point at directories. #23

--- a/man/detox.1
+++ b/man/detox.1
@@ -86,6 +86,8 @@ instead of
 Works on special files (including links).  Normally
 .Nm
 ignores these files.
+.Nm
+will not recurse into symlinks that point at directories.
 .It Fl v
 Be verbose about which files are being renamed.
 .It Fl V
