--- a/man/inline-detox.1
+++ b/man/inline-detox.1
@@ -6,7 +6,7 @@
 .\" For the full copyright and license information, please view the LICENSE
 .\" file that was distributed with this source code.
 .\"
-.Dd February 15, 2021
+.Dd February 24, 2021
 .Dt INLINE-DETOX 1
 .Os
 .Sh NAME
@@ -46,6 +46,12 @@ the output stream.
 If a filename is passed on the command line,
 .Nm
 reads this file and processes each line before writing it to the output stream.
+.Pp
+Running
+.Cm detox
+.Fl -inline
+is identical to running
+.Nm .
 .Ss Sequences
 .Nm
 is driven by a configurable series of filters, called a sequence.
