--- a/man/detox.tbl.5
+++ b/man/detox.tbl.5
@@ -16,30 +16,33 @@
 .Sh OVERVIEW
 .Cm detox
 allows for configuration of how the safe, ISO 8859-1, and UTF-8 (Unicode)
-filters operate.  Through text-based translation tables, it is possible to tune
-how these character sets are interpreted.
+filters operate.
+Through text-based translation tables, it is possible to tune how these
+character sets are interpreted.
 .Sh SYNTAX
-The format of the translation tables is simple.  There are two levels:
-one containing meta data and one containing the actual translations.
+The format of the translation tables is simple.
+There are two levels: one containing meta data and one containing the actual
+translations.
 .Bl -tag -width 0.25i
 .It Cm default Ar _
-Default specifies the default translation for a character.  An empty or
-non-existent default indicates that any unknown character should fall through
-to the next filter.  In this manner, it is possible to chain together multiple
-translation tables in a sequence.
+Default specifies the default translation for a character.
+An empty or non-existent default indicates that any unknown character should
+fall through to the next filter.
+In this manner, it is possible to chain together multiple translation tables in
+a sequence.
 .It Cm start
 Indicates the start of a value list within the translation table.
 .It Cm start Ar lang
-Indicates the start of a language specific value list within the
-translation table.
+Indicates the start of a language specific value list within the translation
+table.
 .It Cm end
 Indicates the end of a value list within the translation table.
 .It Ar value translation
-Value can be specified in decimal (1), hex (0x01) or octal (01).  The
-same rules that apply to sscanf apply here.
+Value can be specified in decimal (1), hex (0x01) or octal (01).
+The same rules that apply to sscanf apply here.
 .Pp
-Translation can be a string or a quoted string, with either single or
-double quotes.
+Translation can be a string or a quoted string, with either single or double
+quotes.
 .El
 .Sh EXAMPLES
 The following example shows a portion of a
@@ -108,7 +111,8 @@ is run, it will run the custom safe filter first, then run the default
 .Ar safe
 filter, and the finally the
 .Ar wipeup
-filter.  See
+filter.
+See
 .Xr detoxrc 5
 for more details on the various filter types.
 .Sh SEE ALSO
