--- a/man/inline-detox.1
+++ b/man/inline-detox.1
@@ -142,8 +142,9 @@ was originally designed to clean up files that I had received from friends
 which had been created using other operating systems.
 It's trivial to create a filename with spaces, parenthesis, brackets, and
 ampersands under some operating systems.
-These have special meaning within FreeBSD and Linux, and cause problems when
-you go to access them.
+These have special meaning within
+.Fx
+and Linux, and cause problems when you go to access them.
 I created
 .Nm
 to clean up these files.
