Additional man page cleanup

--- a/man/detoxrc.5
+++ b/man/detoxrc.5
@@ -138,8 +138,8 @@ filter, at the least.
 .It Cm safe ;
 .It Cm safe Bro Cm builtin Qo Ar name Qc ; Brc ;
 .It Cm safe Bro Cm filename Qo Ar /path/to/filename Qc ; Brc ;
-This could also be called "safe for UNIX-like operating systems".
-It translates characters that are difficult to work with in UNIX environments
+This could also be called "safe for Unix-like operating systems".
+It translates characters that are difficult to work with in Unix environments
 into characters that are not.
 .Pp
 Similar to the
