--- a/man/detox.1
+++ b/man/detox.1
@@ -124,12 +124,17 @@ Normally it extends the system-wide
 unless
 .Fl f
 has been specified, in which case, it is ignored.
-.It Pa /usr/share/detox/safe.tbl
-The default safe character translation table.
+.It Pa /usr/share/detox/cp1252.tbl
+The provided CP-1252 transliteration table.
 .It Pa /usr/share/detox/iso8859_1.tbl
-The default ISO 8859-1 transliteration table.
+The provided ISO 8859-1 transliteration table.
+.It Pa /usr/share/detox/safe.tbl
+The provided safe character translation table.
 .It Pa /usr/share/detox/unicode.tbl
-The default Unicode transliteration table, used by the UTF-8 filter.
+The provided Unicode transliteration table, used by the UTF-8 filter.
+.It Pa /usr/share/detox/unidecode.tbl
+An additional Unicode tranlsiteration table, based on
+.Xr Text::Unidecode 3pm .
 .El
 .Sh EXAMPLES
 .Bl -tag -width Fl
@@ -146,6 +151,7 @@ showing their filters and options.
 .El
 .Sh SEE ALSO
 .Xr inline-detox 1 ,
+.Xr Text::Unidecode 3pm ,
 .Xr detox.tbl 5 ,
 .Xr detoxrc 5 ,
 .Xr ascii 7 ,
@@ -160,8 +166,7 @@ It's trivial to create a filename with spaces, parenthesis, brackets, and
 ampersands under some operating systems.
 These have special meaning within
 .Fx
-and Linux, and cause problems when you go
-to access them.
+and Linux, and cause problems when you go to access them.
 I created
 .Nm
 to clean up these files.
