--- a/man/detoxrc.5
+++ b/man/detoxrc.5
@@ -159,7 +159,7 @@ If
 .Cm remove_trailing
 is set, then periods are added to the set of characters
 to work on.
-The period then takes precendence, followed by the dash.
+The period then takes precedence, followed by the dash.
 .Pp
 If a hash character, underscore, or dash are present at the start of the
 filename, they will be removed.
