Clean up man pages based on mandoc

--- a/man/detox.1
+++ b/man/detox.1
@@ -169,8 +169,9 @@ I created
 to clean up these files.
 .Pp
 Version 2.0 stepped back from transliteration out of the box, instead focusing
-on ease of use.  Version 3.0 further shifted this, by removing most of the
-transliteration from the tables.
+on ease of use.
+Version 3.0 further shifted this, by removing most of the transliteration from
+the tables.
 The primary motivations for this were user-provided feedback, and the fact that
 many modern Unix-like OSs use UTF-8 as their primary character set.
 Transliterating from UTF-8 to ASCII in this scenario is lossy and pointless.
