Add option to overwrite/replace already existing files
Signed-off-by: Attila Kinali <attila@kinali.ch>

--- a/man/detox.1
+++ b/man/detox.1
@@ -68,6 +68,8 @@ Use
 .Pa configfile
 instead of the default configuration files for loading translation sequences.
 No other config file will be parsed.
+.It Fl F
+Overwrite/replace a target file if it already exists.
 .It Fl h , -help
 Display helpful information.
 .It Fl -inline
