Mention #101 PR changes in man pages

--- a/man/detox.1
+++ b/man/detox.1
@@ -117,7 +117,10 @@ Show the current version of
 .Bl -tag -width Fl
 .It Pa /etc/detoxrc
 The system-wide detoxrc file.
-.It Pa ~/.detoxrc
+.It
+.Pa ~/.detoxrc
+or
+.Pa $XDG_CONFIG_HOME/detox/detoxrc
 A user's personal detoxrc.
 Normally it extends the system-wide
 .Pa detoxrc ,
